----------------------------------------------------------------------
 OmegaT 2.6.3 update 3
----------------------------------------------------------------------
   0 Enhancement
   3 Bug fixes
   1 Localisation update
----------------------------------------------------------------------
2.6.3 update 2 vs. 2.6.3 update 1

  Bug fixes: 

  - Team projects: duplicate entries could still happen in the writable 
glossary 

  - Restore default window when saved layout cannot be restored
  https://sourceforge.net/p/omegat/bugs/602/

  - Glossary synchronisation in team projects was not working properly 
under Git

  Localisation updates:

  - French localisation updated to 2.6.3 (Documentation)

----------------------------------------------------------------------
 OmegaT 2.6.3 update 2
----------------------------------------------------------------------
   1 Enhancement
   0 Bug fix
   10 Localisation updates
----------------------------------------------------------------------
2.6.3 update 2 vs. 2.6.3 update 1

  Other enhancements:

  - Add \bn\.\s as an exception to Finnish rules

  Localisation updates:

  - Belarusian localisation updated to 2.6.3 (backported from 3.0) (UI, Readme)
  - Catalan localisation updated to 2.6.3 (UI, Readme, Instant Start)
  - Czech localisation updated to 2.6.3 (UI, Readme, Documentation)
  - Galician localisation backported from 3.0.0 (Documentation)
  - German localisation updated to 2.6.3 (backported from 3.0) (UI, Readme, Instant Start)
  - Greek localisation updated to 2.6.3 (backported from 3.0) (UI, Instant Start)
  - Hungarian localisation updated to 2.6.3 (backported from 3.0) (UI)
  - Japanese localisation updated to 2.6.3-2 (Documentation)
  - Simplified Chinese localisation updated to 2.6.3 (backported from 3.0) (UI)
  - Turkish localisation updated to 2.6.3 (backported from 3.0) (UI)
  - Welsh localisation updated to 2.6.3 (backported from 3.0) (UI, Readme, Instant Start)
